@@ -38,7 +38,12 @@
 
 | 🧽
 | Add `no-wait` instead of `--async` and deprecate it
-https://github.com/knative/client/pull/639[#639]
+| https://github.com/knative/client/pull/639[#639]
+
+| 🧽
+| Refactor service `create_test.go` and `update_test.go` to
+| remove unecessary `sync` parameter in setup call
+| https://github.com/knative/client/pull/656[#656]
 
 ## v0.12.0 (2020-01-29)
 
